crates/math-core/tests/snapshots/custom_cmd_test__def_follows_redefinition.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\def\\a{\\b}\\def\\b{x}\\a\\def\\b{y}\\a"
---
<math>
    <mi>x</mi>
    <mi>y</mi>
</math>
