crates/math-core/tests/snapshots/custom_cmd_test__def_in_global_group.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\zzz\\zzzz"
---
<math>
    <mi>z</mi>
    <mi>q</mi>
</math>
