crates/math-core/tests/snapshots/custom_cmd_test__def_late_binding.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\def\\a{\\b}\\def\\b{x}\\a"
---
<math>
    <mi>x</mi>
</math>
