crates/math-core/tests/snapshots/custom_cmd_test__def_nine_args.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\def\\n#1#2#3#4#5#6#7#8#9{#9#8#7#6#5#4#3#2#1}\\n123456789"
---
<math>
    <mn>987654321</mn>
</math>
