crates/math-core/tests/snapshots/custom_cmd_test__def_one_arg.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\def\\bb#1{\\mathbb{#1}}\\bb{C}"
---
<math>
    <mi>ℂ</mi>
</math>
