crates/math-core/tests/snapshots/custom_cmd_test__def_redefines_builtin.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\def\\frac#1#2{#1/#2}\\frac{1}{2}"
---
<math>
    <mn>1</mn>
    <mo lspace="0" rspace="0">/</mo>
    <mn>2</mn>
</math>
