crates/math-core/tests/snapshots/custom_cmd_test__def_redefines_config_macro.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\def\\cfgcmd{y}\\cfgcmd"
---
<math>
    <mi>y</mi>
</math>
