crates/math-core/tests/snapshots/custom_cmd_test__def_redefines_def.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\def\\zz{1}\\def\\zz{2}\\zz"
---
<math>
    <mn>2</mn>
</math>
