crates/math-core/tests/snapshots/custom_cmd_test__def_repeated_arg.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\def\\sq#1{#1^2}\\sq{y}+\\sq{y}"
---
<math>
    <msup>
        <mi>y</mi>
        <mn>2</mn>
    </msup>
    <mo>+</mo>
    <msup>
        <mi>y</mi>
        <mn>2</mn>
    </msup>
</math>
