crates/math-core/tests/snapshots/custom_cmd_test__def_spaced_without_params.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\def \\a {x}\\a"
---
<math>
    <mi>x</mi>
</math>
